plugins {
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.146'
}

version = '0.5.8'
group = 'meteordevelopment'

base {
    archivesName = 'meteor-client-neoforge-1.21.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

sourceSets {
    stubs {
        java {
            srcDirs = ['src/stubs/java']
        }
    }
}

neoForge {
    version = '21.1.249'

    accessTransformers {
        from file('src/main/resources/META-INF/accesstransformer.cfg')
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', 'meteor_client'
        }
    }

    mods {
        meteor_client {
            sourceSet sourceSets.main
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url = 'https://maven.neoforged.net/releases' }
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    // Netty proxy handler for Socks4/Socks5 proxies
    implementation 'io.netty:netty-handler-proxy:4.1.97.Final'

    // Shaded / required dependencies
    implementation 'org.javassist:javassist:3.30.2-GA'
    implementation 'org.reflections:reflections:0.10.2'

    // Baritone implementation from local libs
    implementation files('libs/baritone-unoptimized-neoforge-1.11.3.jar')
}

tasks.named('compileStubsJava') {
    classpath = sourceSets.main.compileClasspath
}

tasks.named('compileJava') {
    classpath += sourceSets.stubs.output
    dependsOn tasks.named('compileStubsJava')
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('jar') {
    from {
        zipTree('libs/baritone-unoptimized-neoforge-1.11.3.jar').matching {
            exclude 'META-INF/MANIFEST.MF'
            exclude 'META-INF/neoforge.mods.toml'
            exclude 'mixins.baritone.json'
            exclude 'baritone/command/argument/CommandArgument*.class'
            exclude 'baritone/command/argument/CommandArguments*.class'
            exclude 'baritone/cache/ChunkPacker*.class'
        }
    }
    from {
        configurations.runtimeClasspath.filter {
            it.name.startsWith('reflections-')
        }.collect {
            zipTree(it).matching {
                exclude 'META-INF/**'
            }
        }
    } {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }
}
